Sessão SOBRE NÓS
Desenvolvimento da sessão sobre nós do site.

--- a/index.html
+++ b/index.html
@@ -1,23 +1,42 @@
 <html>
-    <head>
-        <link href="CSS/estilos.css" rel="stylesheet"/>
-        <meta charset="UTF-8"/>
-        <title>Jessica's Studio</title>
-    </head>
-    <body>
-       <header>
-            <div class = "divHeader">
-                <img src="img/logo2.png" title="Site da Jessica's Studio" class="logo"/>
-                    <nav>
-                         <ul>
-                            <li> Home </li>
-                            <li> Produtos </li>
-                            <li> Contato </li>
-                        </ul>
-                </nav>
-            </div>
-       </header>
-       <img src="img/banner.png" title="Banner da Jessica's Studio" class="banner"/>
-    </body>
+
+<head>
+    <link href="CSS/estilos.css" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <title>Jessica's Studio</title>
+</head>
+
+<body>
+    <header>
+        <div class="divHeader">
+            <img src="img/logo2.png" title="Site da Jessica's Studio" class="logo" />
+            <nav>
+                <ul>
+                    <li> Home </li>
+                    <li> Produtos </li>
+                    <li> Contato </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <img src="img/banner.png" title="Banner da Jessica's Studio" class="banner" />
+
+    <!--Conteúdo da página WEB-->
+    <main>
+        <section class="Sobre_nos">
+            <h2 class="titulo_sobrenos">Sobre nós</h2>
+            <img src="img/logo.png" class="img_sobrenos"/>
+            <p> Lorem <strong>dolor sit amet consectetur adipisicing</strong> elit. Porro voluptates necessitatibus rem ducimus
+                atque vel fuga quibusdam iure quia fugiat<br><br> Temporibus facere reprehenderit, nemo incidunt aspernatur
+                debitis odio accusantium! Lorem ipsum dolor sit 
+            </p>
+            <p>
+                amet consectetur adipisicing elit. Porro voluptates necessitatibusamet consectetur adipisicing elit. Porro voluptates necessitatibus rem ducimus Molestiae?
+                amet consectetur adipisicing elit. Porro voluptates namet consectetur adipisicing elit. Porro voluptates necessitatibus rem ducimus Molestiae?  
+                ecessitatibus rem ducimus Molestiae?
+                rem ducimus Molestiae?
+            </p>
+        </section>
+    </main>
+</body>
 <html>
-    
