Sessão Nossos Serviços e Mapa
Adicionado um mapa com a localização e uma sessão com os serviços

--- a/index.html
+++ b/index.html
@@ -23,20 +23,46 @@
 
     <!--Conteúdo da página WEB-->
     <main>
+        <!--Sobre Nós-->
         <section class="Sobre_nos">
             <h2 class="titulo_sobrenos">Sobre nós</h2>
-            <img src="img/logo.png" class="img_sobrenos"/>
-            <p> Lorem <strong>dolor sit amet consectetur adipisicing</strong> elit. Porro voluptates necessitatibus rem ducimus
-                atque vel fuga quibusdam iure quia fugiat<br><br> Temporibus facere reprehenderit, nemo incidunt aspernatur
-                debitis odio accusantium! Lorem ipsum dolor sit 
+            <img src="img/logo.png" class="img_sobrenos" />
+            <p> Lorem <strong>dolor sit amet consectetur adipisicing</strong> elit. Porro voluptates necessitatibus rem
+                ducimus
+                atque vel fuga quibusdam iure quia fugiat<br><br> Temporibus facere reprehenderit, nemo incidunt
+                aspernatur
+                debitis odio accusantium! Lorem ipsum dolor sit
             </p>
             <p>
-                amet consectetur adipisicing elit. Porro voluptates necessitatibusamet consectetur adipisicing elit. Porro voluptates necessitatibus rem ducimus Molestiae?
-                amet consectetur adipisicing elit. Porro voluptates namet consectetur adipisicing elit. Porro voluptates necessitatibus rem ducimus Molestiae?  
+                amet consectetur adipisicing elit. Porro voluptates necessitatibusamet consectetur adipisicing elit.
+                Porro voluptates necessitatibus rem ducimus Molestiae?
+                amet consectetur adipisicing elit. Porro voluptates namet consectetur adipisicing elit. Porro voluptates
+                necessitatibus rem ducimus Molestiae?
                 ecessitatibus rem ducimus Molestiae?
                 rem ducimus Molestiae?
             </p>
         </section>
+        <!--Nosso Estabelecimento-->
+        <section class="mapaGeral">
+            <h2 class="titulo_sobrenos">Nosso Estabelecimento</h2>
+            <p>Veja abaixo como nos encontrar</p>
+            <div class="mapa">
+                <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.2546088362355!2d-46.45273147691174!3d-23.66685115745964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce695b3f83ec55%3A0x39bc5ecf1895cd94!2sR.%20Alm.%20Tamandar%C3%A9%2C%2089%20-%20Vila%20Bocaina%2C%20Mau%C3%A1%20-%20SP%2C%2009310-350!5e0!3m2!1spt-BR!2sbr!4v1740786804250!5m2!1spt-BR!2sbr"
+                width="900" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+        </section>
+        <!--Nossos Serviços-->
+        <h2 class="titulo_sobrenos">Nossos Serviços</h2>
+        <div class="nossos_servicos">
+                <ul>
+                    <li> Cílhos </li>
+                    <li> Sombrancelhas </li>
+                    <li> Penteados </li>
+                </ul>
+        </div>
     </main>
 </body>
 <html>
