Edições Nossos Serviços
Alteração no gradiente, adição de imagens e troca do banner.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!--Sobre Nós-->
         <section class="Sobre_nos">
             <h2 class="titulo_sobrenos">Sobre nós</h2>
-            <img src="img/logo.png" class="img_sobrenos" />
+            <img src="img/design.png" class="img_sobrenos" />
             <p> Lorem <strong>dolor sit amet consectetur adipisicing</strong> elit. Porro voluptates necessitatibus rem
                 ducimus
                 atque vel fuga quibusdam iure quia fugiat<br><br> Temporibus facere reprehenderit, nemo incidunt
@@ -55,14 +55,17 @@
             </div>
         </section>
         <!--Nossos Serviços-->
-        <h2 class="titulo_sobrenos">Nossos Serviços</h2>
-        <div class="nossos_servicos">
+        <section>
+         <h2 class="titulo_produtos">Nossos Serviços</h2>
+          <div class="nossos_servicos">
                 <ul>
                     <li> Cílhos </li>
                     <li> Sombrancelhas </li>
                     <li> Penteados </li>
                 </ul>
-        </div>
+          </div>
+          <img src="img/henna.png" class="img_produtos"/>   
+        </section>
     </main>
 </body>
 <html>
