--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <link href="CSS/estilos.css" rel="stylesheet" />
+    <link href="<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <meta charset="UTF-8" />
     <title>Jessica's Studio</title>
 </head>
@@ -48,24 +49,36 @@
             <p>Veja abaixo como nos encontrar</p>
             <div class="mapa">
                 <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.2546088362355!2d-46.45273147691174!3d-23.66685115745964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce695b3f83ec55%3A0x39bc5ecf1895cd94!2sR.%20Alm.%20Tamandar%C3%A9%2C%2089%20-%20Vila%20Bocaina%2C%20Mau%C3%A1%20-%20SP%2C%2009310-350!5e0!3m2!1spt-BR!2sbr!4v1740786804250!5m2!1spt-BR!2sbr"
-                width="900" height="400" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.2546088362355!2d-46.45273147691174!3d-23.66685115745964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce695b3f83ec55%3A0x39bc5ecf1895cd94!2sR.%20Alm.%20Tamandar%C3%A9%2C%2089%20-%20Vila%20Bocaina%2C%20Mau%C3%A1%20-%20SP%2C%2009310-350!5e0!3m2!1spt-BR!2sbr!4v1740786804250!5m2!1spt-BR!2sbr"
+                    width="900" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
             </div>
         </section>
         <!--Nossos Serviços-->
-        <section>
-         <h2 class="titulo_produtos">Nossos Serviços</h2>
-          <div class="nossos_servicos">
-                <ul>
-                    <li> Cílhos </li>
-                    <li> Sombrancelhas </li>
-                    <li> Penteados </li>
-                </ul>
-          </div>
-          <img src="img/henna.png" class="img_produtos"/>   
+        <section class="nossosprodutos">
+            <h2 class="titulo_sobrenos">Nossos Produtos</h2>
+            <div class="div_nossosprodutos">
+                <ul class="lista_nossosprodutos">
+                    <li>Cílios;</li>
+                    <li>Somrancelha de Henna;</li>
+                    <li>Penteados;</li>
+                    <li>Chapinha;</li>
+                    <li>Baby Liss;</li>
+                </ul><img src="img/henna.png" class="img_nossosprodutos" />
+            </div>
+            <div>
+                <iframe class="div_video" width="560" height="315" src="https://www.youtube.com/embed/nE2tDaERQv0?si=RiIpOfuM5S5w8nHF"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
         </section>
     </main>
+    <!--Rodapé-->
+    <footer>
+        <img src="img/logo2.png" title="Site da Jessica's Studio" class="logo_footer" />
+        <p>Agende seu horário on-line: <a href="https://wa.me/5511992368297"><i class="fa fa-whatsapp"></i></a> (11) 99236-8297 | <a href="https://instagram.com/silfazendoarte_"><i class="fa fa-instagram"></i></a> @hb_palma</p>
+    </footer>
 </body>
-<html>
+</html>
