--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <head>
     <link href="CSS/estilos.css" rel="stylesheet" />
-    <link href="<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="<link href=" https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+        rel="stylesheet">
     <meta charset="UTF-8" />
     <title>Jessica's Studio</title>
 </head>
@@ -28,19 +29,16 @@
         <section class="Sobre_nos">
             <h2 class="titulo_sobrenos">Sobre nós</h2>
             <img src="img/design.png" class="img_sobrenos" />
-            <p> Lorem <strong>dolor sit amet consectetur adipisicing</strong> elit. Porro voluptates necessitatibus rem
-                ducimus
-                atque vel fuga quibusdam iure quia fugiat<br><br> Temporibus facere reprehenderit, nemo incidunt
-                aspernatur
-                debitis odio accusantium! Lorem ipsum dolor sit
-            </p>
-            <p>
-                amet consectetur adipisicing elit. Porro voluptates necessitatibusamet consectetur adipisicing elit.
-                Porro voluptates necessitatibus rem ducimus Molestiae?
-                amet consectetur adipisicing elit. Porro voluptates namet consectetur adipisicing elit. Porro voluptates
-                necessitatibus rem ducimus Molestiae?
-                ecessitatibus rem ducimus Molestiae?
-                rem ducimus Molestiae?
+            <p>No Jessica’s Studio, acreditamos que <strong> beleza vai além da estética, é uma forma de expressão e
+                autocuidado.</strong> Somos um salão de beleza aconchegante, criado para oferecer um atendimento personalizado e
+                transformar cada visita em uma experiência única.<br>
+                <br>
+                Nossa equipe é apaixonada por realçar a beleza natural de cada cliente, utilizando técnicas modernas e
+                produtos de alta qualidade. Oferecemos serviços de cortes, coloração, penteados, manicure, pedicure e
+                tratamentos capilares, sempre com um toque especial de carinho e dedicação.<br>
+                <br>
+                Seja para um simples retoque ou uma transformação completa, <strong>estamos aqui para cuidar de você.</strong> Venha
+                conhecer o Jessica’s Studio e sinta-se ainda mais linda!
             </p>
         </section>
         <!--Nosso Estabelecimento-->
@@ -68,8 +66,9 @@
                 </ul><img src="img/henna.png" class="img_nossosprodutos" />
             </div>
             <div>
-                <iframe class="div_video" width="560" height="315" src="https://www.youtube.com/embed/nE2tDaERQv0?si=RiIpOfuM5S5w8nHF"
-                    title="YouTube video player" frameborder="0"
+                <iframe class="div_video" width="560" height="315"
+                    src="https://www.youtube.com/embed/nE2tDaERQv0?si=RiIpOfuM5S5w8nHF" title="YouTube video player"
+                    frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
@@ -78,7 +77,10 @@
     <!--Rodapé-->
     <footer>
         <img src="img/logo2.png" title="Site da Jessica's Studio" class="logo_footer" />
-        <p>Agende seu horário on-line: <a href="https://wa.me/5511992368297"><i class="fa fa-whatsapp"></i></a> (11) 99236-8297 | <a href="https://instagram.com/silfazendoarte_"><i class="fa fa-instagram"></i></a> @hb_palma</p>
+        <p>Agende seu horário on-line: <a href="https://wa.me/5511992368297"><i class="fa fa-whatsapp"></i></a> (11)
+            99236-8297 | <a href="https://instagram.com/silfazendoarte_"><i class="fa fa-instagram"></i></a> @hb_palma
+        </p>
     </footer>
 </body>
+
 </html>
