--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 
 <head>
     <link href="CSS/estilos.css" rel="stylesheet" />
-    <link href="<link href=" https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
-        rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"rel="stylesheet">
     <meta charset="UTF-8" />
     <title>Jessica's Studio</title>
 </head>
@@ -21,7 +20,7 @@
             </nav>
         </div>
     </header>
-    <img src="img/banner.png" title="Banner da Jessica's Studio" class="banner" />
+    <img src="img/footerfundo.png" title="Banner da Jessica's Studio" class="banner" />
 
     <!--Conteúdo da página WEB-->
     <main>
@@ -77,10 +76,10 @@
     <!--Rodapé-->
     <footer>
         <img src="img/logo2.png" title="Site da Jessica's Studio" class="logo_footer" />
-        <p>Agende seu horário on-line: <a href="https://wa.me/5511992368297"><i class="fa fa-whatsapp"></i></a> (11)
-            99236-8297 | <a href="https://instagram.com/silfazendoarte_"><i class="fa fa-instagram"></i></a> @hb_palma
+        <p>Agende seu horário on-line: <a href="https://wa.me/5511983881471"><i class="fa fa-whatsapp"></i></a> (11)
+            98388-1471 | <a href="https://instagram.com/hb_palma"><i class="fa fa-instagram"></i></a> @hb_palma
         </p>
+       <!-- <img src="img/footerfundo.png" title="footer" class="img_footer" />-->
     </footer>
 </body>
-
 </html>
