--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
+<html lang="pt-br">
 
 <head>
     <link href="CSS/estilos.css" rel="stylesheet" />
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <meta charset="UTF-8" />
-    <title>Jessica's Studio</title>
+    <title>Chico's Burger</title>
 </head>
 
 <body>
@@ -14,13 +15,13 @@
             <nav>
                 <ul>
                     <li> Home </li>
-                    <li> Produtos </li>
+                    <li> <a href="produtos.html">Produtos</a> </li>
                     <li> Contato </li>
                 </ul>
             </nav>
         </div>
     </header>
-    <img src="img/footerfundo.png" title="Banner da Jessica's Studio" class="banner" />
+    <img src="img/aborgue.png" title="Banner da Jessica's Studio" class="banner" />
 
     <!--Conteúdo da página WEB-->
     <main>
@@ -29,14 +30,16 @@
             <h2 class="titulo_sobrenos">Sobre nós</h2>
             <img src="img/design.png" class="img_sobrenos" />
             <p>No Jessica’s Studio, acreditamos que <strong> beleza vai além da estética, é uma forma de expressão e
-                autocuidado.</strong> Somos um salão de beleza aconchegante, criado para oferecer um atendimento personalizado e
+                    autocuidado.</strong> Somos um salão de beleza aconchegante, criado para oferecer um atendimento
+                personalizado e
                 transformar cada visita em uma experiência única.<br>
                 <br>
                 Nossa equipe é apaixonada por realçar a beleza natural de cada cliente, utilizando técnicas modernas e
                 produtos de alta qualidade. Oferecemos serviços de cortes, coloração, penteados, manicure, pedicure e
                 tratamentos capilares, sempre com um toque especial de carinho e dedicação.<br>
                 <br>
-                Seja para um simples retoque ou uma transformação completa, <strong>estamos aqui para cuidar de você.</strong> Venha
+                Seja para um simples retoque ou uma transformação completa, <strong>estamos aqui para cuidar de
+                    você.</strong> Venha
                 conhecer o Jessica’s Studio e sinta-se ainda mais linda!
             </p>
         </section>
@@ -46,10 +49,9 @@
             <p>Veja abaixo como nos encontrar</p>
             <div class="mapa">
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.2546088362355!2d-46.45273147691174!3d-23.66685115745964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce695b3f83ec55%3A0x39bc5ecf1895cd94!2sR.%20Alm.%20Tamandar%C3%A9%2C%2089%20-%20Vila%20Bocaina%2C%20Mau%C3%A1%20-%20SP%2C%2009310-350!5e0!3m2!1spt-BR!2sbr!4v1740786804250!5m2!1spt-BR!2sbr"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.128082572564!2d-46.47815392378616!3d-23.63558366432492!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce68f78142e075%3A0x784e890dd965893f!2sR.%20Vicente%20Celestino%2C%201163%20-%20Jardim%20Sonia%20Maria%2C%20Mau%C3%A1%20-%20SP%2C%2009380-415!5e0!3m2!1spt-BR!2sbr!4v1743198480825!5m2!1spt-BR!2sbr"
                     width="900" height="400" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
         <!--Nossos Serviços-->
@@ -57,17 +59,15 @@
             <h2 class="titulo_sobrenos">Nossos Produtos</h2>
             <div class="div_nossosprodutos">
                 <ul class="lista_nossosprodutos">
-                    <li>Cílios;</li>
-                    <li>Somrancelha de Henna;</li>
-                    <li>Penteados;</li>
-                    <li>Chapinha;</li>
-                    <li>Baby Liss;</li>
-                </ul><img src="img/henna.png" class="img_nossosprodutos" />
+                    <li>Lanches;</li>
+                    <li>Porções;</li>
+                    <li>Bebeidas;</li>
+                    <li>Sobremesas;</li>
+                </ul><img src="img/aborguesobrenos.png" class="img_nossosprodutos" />
             </div>
             <div>
-                <iframe class="div_video" width="560" height="315"
-                    src="https://www.youtube.com/embed/nE2tDaERQv0?si=RiIpOfuM5S5w8nHF" title="YouTube video player"
-                    frameborder="0"
+                <iframe class="div_video" width="560" height="315" src="https://www.youtube.com/embed/B8gyW3N3eGY?si=72YOhGqRRG_ZI0PT"
+                    title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
@@ -77,9 +77,11 @@
     <footer>
         <img src="img/logo2.png" title="Site da Jessica's Studio" class="logo_footer" />
         <p>Agende seu horário on-line: <a href="https://wa.me/5511983881471"><i class="fa fa-whatsapp"></i></a> (11)
-            98388-1471 | <a href="https://instagram.com/hb_palma"><i class="fa fa-instagram"></i></a> @hb_palma
+            98388-1471 | <a href="https://instagram.com/hb_palma"><i class="fa fa-instagram"></i></a>
+            @hb_palma
         </p>
-       <!-- <img src="img/footerfundo.png" title="footer" class="img_footer" />-->
+        <!-- <img src="img/footerfundo.png" title="footer" class="img_footer" />-->
     </footer>
 </body>
+
 </html>
