--- a/produtos.html
+++ b/produtos.html
@@ -6,6 +6,14 @@
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
         <meta charset="UTF-8" />
         <title> Produtos </title>
+        <script>
+            alert('Conheça nosso cardápio!');
+
+            data = new Date;
+
+            dia = new Array('Domingo','Segundo-Feira','Terça-Feira','Quarta-Feira','Quinta-Feira','Sexta-Feira','Sábado');
+            mes = new Array('Janeiro','Fevereiro','Março','Abril','Maio','Junho','Julho','Agosto','Setembro','Outubro','Novembro','Dezembro');
+        </script>
      </head>
     
      <body>
@@ -29,26 +37,66 @@
             <ul class="produtos-titulo">
                 <li class="produtos-item">Produtos</li>
             </ul>
-            <p class="texto-produto">Fazemos delivery e retirada no local. <br> <br>Conheça nossos lanches e porções! <br><br>Lanches exclusivos e sabores inesqueciveis
+            <p style="text-align: right; margin-reight: 10px;">
+                <script>
+                    document.write(dia[data.getDay()]+', '+data.getDate()+' de '+mes[data.getMonth()]+' de '+data.getFullYear());
+                </script>
+            </p>
+            <p class="texto-produto">Fazemos delivery e retirada no local.🚀 <br> <br>Conheça nossos lanches e porções! <br><br>Lanches exclusivos e sabores inesqueciveis 💣
             </p>
             <div class="container">
                 <div class="card">
                     <img src="img/aborgue1.png" class="img-card">
                     <h2>Clássico Chico's Smash Burger</h2>
-                    <p>Dois smash burgers de 120g no pão de brioche, queijo cheddar, maionese caseira, cebola caramelizada</p>
+                    <p>Dois smash burgers de 120g no pão de brioche, queijo cheddar, maionese caseira, cebola caramelizada.</p>
                     <span class="preco">R$ 29,90</span>
                 </div>
                 <div class="card">
                     <img src="img/aborgue2.png" class="img-card">
                     <h2>Chico's Bacon Churrasco</h2>
-                    <p>Um burger alto de 22og Angus no pão de brioche, queijo gruyere, molho agridoce picante e bacon crispy</p>
+                    <p>Um burger alto de 220g Angus no pão de brioche, queijo gruyere, molho agridoce picante e bacon crispy.</p>
                     <span class="preco">R$ 39,90</span>
                 </div>
                 <div class="card">
                     <img src="img/aborgue3.png" class="img-card">
                     <h2>Chico's Salada Master</h2>
-                    <p>Um burger alto de 190g Angus no pão de brioche, queijo Prato, maionese picante e Mix de saladas</p>
+                    <p>Um burger alto de 190g Angus no pão de brioche, queijo Prato, maionese picante e Mix de salada.s</p>
                     <span class="preco">R$ 32,90</span>
+                </div>
+                <div class="card">
+                    <img src="img/aborgue4.png" class="img-card">
+                    <h2>Chico's Australiano</h2>
+                    <p>Dois smash burgers de 120g no pão australiano, creme de queijo cheddar, bacon crispy.</p>
+                    <span class="preco">R$ 39,90</span>
+                </div>
+                <div class="card">
+                    <img src="img/aborgue5.png" class="img-card">
+                    <h2>Chico's Frango Brabo</h2>
+                    <p>Um peito de frango empanado de 200g no pão de francês redondo, queijo Prato, maionese acida e Mix de saladas.</p>
+                    <span class="preco">R$ 29,90</span>
+                </div> <div class="card">
+                    <img src="img/aborgue6.png" class="img-card">
+                    <h2>Chico's Master Fish</h2>
+                    <p>Um filé de peixe empanado de 150g no pão de brioche, queijo Prato, maionese Tártaro e Mix de saladas.</p>
+                    <span class="preco">R$ 34,90</span>
+                </div>
+                <div class="card">
+                    <img src="img/cebola.png" class="img-card">
+                    <h2>Chico's Cebola Cabulosa</h2>
+                    <p>Porção de anéis de cebola empanada com maionese de alho.</p>
+                    <span class="preco">R$ 19,90</span>
+                </div>
+                <div class="card">
+                    <img src="img/batata.png" class="img-card">
+                    <h2>Chico's Batata Bolada</h2>
+                    <p>Porção de batatas com cheddar e bacon temperada com o segredo da casa.</p>
+                    <span class="preco">R$ 19,90</span>
+                </div>
+                <div class="card">
+                    <img src="img/dadosdetapioca.png" class="img-card">
+                    <h2>Chico's Dadinhos Maldosos</h2>
+                    <p>Porção de dadinhos de tapioca fritos com geleia de pimenta.</p>
+                    <span class="preco">R$ 14,90</span>
                 </div>
             </div>
          </main>
